--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -377,3 +377,11 @@ div.footer { bottom: inherit; }
 .editprofilemanagementarea{display: block;padding: 15px 9.5px 4.5px 9.5px;margin: 0 0 10px;font-size: 13px;line-height: 20px;word-break: break-all;word-wrap: break-word;background-color: #f5f5f5;border: 1px solid #ccc;border: 1px solid rgba(0, 0, 0, 0.15);-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;}
 .editprofilemanagementarea .control-group{display:inline-block; margin:0; padding:0;position: relative; bottom:3px;}
 .editprofilemanagementarea control-label{font-weight:bold; padding:0; margin:0; position:relative; top:3px; }
+
+/* Idea page */
+#ideapage{margin-top:37px;}
+.ideaheader{border-radius:6px; background-color:white; padding:10px 12px; margin-bottom:12px; border: 1px solid rgba(0, 0, 0, .1);}
+.ideaheader span{font-size:50px; position:relative; bottom:42px;}
+.ideaheader img{height:115px; vertical-align:baseline;}
+.ideaheader h4{font-weight:bold; line-height:32px; font-size:16px}
+.ideacontainer{background-color:white; min-height:200px; border-bottom-right-radius:6px; border-bottom-left-radius:6px;}
