--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -18,11 +18,18 @@
         %div#topboxcontent
           - if current_user
             %div.button.button-actionable{ style: "float: right;"} Continue Level #{@enrollment.level} »
+          - else
+            %div.challenge_stats
+              %span Challenge stats:
+              %ul
+                %li #{@path.tasks.size} Arena Questions
+                %li 12 Creative Responses
+                %li 8 Tasks
           %div{ style: "width: 550px; margin-top: 10px;" }
             %h1= @path.name
             - if current_user
               %h3{ style: "font-size: 18px; line-height:33px; " } Level #{@enrollment.level}, #{@enrollment.total_points} points
-            - else
+            - else              
               %h4{ style: "height: 42px; cursor: pointer; margin-top:4px;" }
                 %a.login_link Login or register to join this Challenge!
         %div#challengecarousel_container
