Fixes to the idea exchange.

--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -1,5 +1,5 @@
 %div.postfooter
-  %div.leftstuff{ style: "height: 27px; width: 100%; padding-top: 5px;" }
+  %div.leftstuff
     %div.displayin.floatl
       %a.comment{ style: "position: relative; top: 5px;", onclick: "open_comments(this);" } #{owner.comments.size.to_i} Comments
     - if @compact_social
