--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -28,7 +28,7 @@
 .obfuscation img{ margin-top:38px; }
 .obfuscation a{ color:gray; }
 .postfooter{ color:#999; font-size:11px; text-align: right; margin:0 -13px 0 0; position:relative; top:4px;}
-.leftstuff { display:inline-block; margin: 4px 0 4px 0; }
+.leftstuff { display:inline-block; margin: 4px 0 4px 0; height: 27px; width: 100%; padding-top: 5px; }
 .leftstuff a { cursor:pointer; text-decoration:none; color: #004700; font-weight:normal; }
 .leftstuff a:hover { text-decoration:underline; }
 .posttimestamp{display:inline-block; top:10px; position:relative; }
@@ -381,12 +381,14 @@ div.footer { bottom: inherit; }
 .editprofilemanagementarea control-label{font-weight:bold; padding:0; margin:0; position:relative; top:3px; }
 
 /* Idea page */
-#ideapage{margin-top:37px;}
-.ideaheader{border-radius:6px; background-color:white; padding:10px 12px; margin-bottom:12px; border: 1px solid rgba(0, 0, 0, .1);}
-.ideaheader span{font-size:50px; position:relative; bottom:42px;}
-.ideaheader img{height:115px; vertical-align:baseline;}
-.ideaheader h4{font-weight:bold; line-height:32px; font-size:16px}
-.ideacontainer{background-color:white; min-height:200px; border-bottom-right-radius:6px; border-bottom-left-radius:6px;}
+.ideaheader { vertical-align: middle; border-radius:6px; background-color:white; padding:10px 12px; margin-bottom:12px; border: 1px solid rgba(0, 0, 0, .1);}
+.ideaheader span{ font-size:50px; }
+.ideaheader img { height:115px; }
+.ideaheader h4 { font-weight:bold; line-height:32px; font-size:16px }
+.idea_container { border-bottom: 1px solid #DDD; margin: 0 20px 0 20px; padding: 15px 0px 8px 0px; }
+#ideapage pre { padding: 0px; background-color: inherit; border: 0px; }
+#ideapage .postfooter .leftstuff { padding-top: 0px; height: 20px; }
+#ideapage .postfooter { margin: 0; }
 
 /* Signed Out Challenge page */
 .challenge_stats{float:right; font-size:13px;position:relative; bottom:7px;}
