--- a/app/views/ideas/form.html.haml
+++ b/app/views/ideas/form.html.haml
@@ -1,14 +1,24 @@
 %div.single_pane
-  %h3= @idea.new_record? ? "New Idea" : "Edit Idea"
-  = form_for(@idea, class:"form-horizontal") do |f|
-    %div.control-group
-      %label.control-label Title
-      %div.controls
-        = f.text_field(:title)
-    %div.control-group
-      %label.control-label Description
-      %div.controls
-        = f.text_area(:description, style: "width: 400px; height: 100px;")
-    %div.control-group
-      %div.controls
-        = f.submit("Submit Idea", class: "button button-info")
+  %div.submit_idea{style:"display:inline-block;"}
+    %h2= @idea.new_record? ? "Submit a new idea" : "Edit Idea"
+    = form_for(@idea, class:"form-horizontal") do |f|
+      %div.control-group
+        %span.help-block{style:"width:400px;"} Title
+        %div.controls
+          = f.text_field(:title)
+      %div.control-group
+        %span.help-block Description
+        %div.controls
+          = f.text_area(:description, style: "width: 400px; height: 100px;")
+      %div.control-group
+        %div.controls
+          = f.submit("Submit Idea", class: "button button-actionable", style: "float:right;")
+  %div.submit_idea_tips
+    %h3 
+      %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:30px; width:30px;"}
+      Tips:
+    %ul
+      %li Keep the title of your idea short and sweet.
+      %li Use the decription to elaborate on your idea and also to say why you think it'd be useful.
+      %li Try not to squeeze multiple ideas into the same submission. If you have more than one idea, just submit them all individually.
+      %li Make sure you check for spelling and grammar.
