--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -392,6 +392,7 @@ div.footer { bottom: inherit; }
 #ideapage .leftboxheader a {text-decoration:none; text-transform:none; cursor:pointer;}
 .ideacontent {width:85%;}
 .ideacontent h4 {margin-bottom:10px; font-weight:bold; font-size:16px; }
+.ideacontent pre{margin:0; padding:0; border:none; background-color:inherit;}
 .singleidea {border-radius: 3px;box-shadow: 0 2px 4px rgba(0, 0, 0, .05);background-color: #F9F9F9;border: 1px solid #ccc;padding:12px 12px 6px 12px; margin-bottom:20px; }
 .singleidea .postfooter {margin-right:0;}
 .submit_idea .help-block {font-size:16px;}
