--- a/app/views/companies/users.html.haml
+++ b/app/views/companies/users.html.haml
@@ -5,22 +5,20 @@
   %table.table
     %thead
       %tr
-        %th Rank
         %th Name
         %th Role
         %th Email
         %th= link_to "Last Login", admin_users_path(sort: "login_at")
         %th= link_to "Created", admin_users_path(sort: "created_at")
         %th= link_to "Points", admin_users_path(sort: "earned_points")
-        %th Enrollments
-        %th Votes
-        %th Comments
+        %th E
+        %th V
+        %th C
         %th Status
     %tbody
-      - @users.to_a.each_with_index do |u, i|
+      - @users.to_a.each do |u|
         %tr
-          %td= i
-          %td= link_to u.name, profile_path(u.username)
+          %td= link_to truncate(u.name, length: 20), profile_path(u.username)
           %td= link_to u.user_role.name, update_users_role_path(u.id)
           %td= u.email
           %td= u.login_at.strftime("%m/%d/%Y")
