--- a/app/views/companies/issues.html.haml
+++ b/app/views/companies/issues.html.haml
@@ -6,7 +6,7 @@
       %tr
         %th{ style: "width: 5%" } id
         %th{ style: "width: 15%" } Path
-        %th{ style: "width: 10%" } User Name
+        %th{ style: "width: 10%" } User
         %th{ style: "width: 40%" } Question
         %th{ style: "width: 15%" } Type
         %th{ style: "width: 5%" } Edit
