--- a/app/views/companies/paths.html.haml
+++ b/app/views/companies/paths.html.haml
@@ -10,7 +10,7 @@
         %th Persona
         %th Sections
         %th Tasks
-        %th User Name
+        %th User
         %th Published
         %th Status
     %tbody
