--- a/app/views/companies/comments.html.haml
+++ b/app/views/companies/comments.html.haml
@@ -6,18 +6,24 @@
     %thead
       %tr
         %th{ style: "width: 5%" } id
-        %th{ style: "width: 15%" } Path
-        %th{ style: "width: 10%" } User Name
+        %th{ style: "width: 10%" } User
+        %th{ style: "width: 25%" } Path/Idea
         %th{ style: "width: 50%" } Comment
-        %th{ style: "width: 10%" } Type
         %th{ style: "width: 10%" } Approve
     %tbody
       - @comments.to_a.each do |c|
         %tr
           %td= c.id
-          %td= c.owner.task.path.name
           %td= link_to c.user.name, profile_path(c.user.username)
-          %td= c.content
+          %td
+            - if c.owner.is_a? SubmittedAnswer
+              = c.owner.task.path.name
+            - elsif c.owner.is_a? Idea
+              = c.owner.title
+            - else
+              - raise c.owner.class.to_s
+          %td
+            %pre.unstyled= c.content
           %td= link_to "approve", admin_update_comment_path(c), class: "mark_reviewed", remote: true, method: "put"
   = link_to "Refresh", admin_comments_path, class: "button button-standard"
 :javascript
