--- a/app/views/companies/tasks.html.haml
+++ b/app/views/companies/tasks.html.haml
@@ -7,7 +7,7 @@
       %tr
         %th{ style: "width: 5%" } id
         %th{ style: "width: 15%" } Path
-        %th{ style: "width: 10%" } User Name
+        %th{ style: "width: 10%" } User
         %th{ style: "width: 50%" } Question
         %th{ style: "width: 10%" } Type
         %th{ style: "width: 10%" } Approve
@@ -17,7 +17,8 @@
           %td= t.id
           %td= t.path.name
           %td= link_to t.creator.name, profile_path(t.creator.username)
-          %td= t.question
+          %td
+            %pre.unstyled= t.question
           %td= Task::TYPES[t.answer_type]
           %td= link_to "approve", admin_update_task_path(t), class: "mark_reviewed", remote: true, method: "put"
   = link_to "Refresh", admin_tasks_path, class: "button button-standard"
