changes to ideas in progress

--- a/app/views/ideas/form.html.haml
+++ b/app/views/ideas/form.html.haml
@@ -20,5 +20,5 @@
     %ul
       %li Keep the title of your idea short and sweet.
       %li Use the decription to elaborate on your idea and also to say why you think it'd be useful.
-      %li Try not to squeeze multiple ideas into the same submission. If you have more than one idea, just submit them all individually.
+      %li Try not to squeeze multiple ideas into the same submission. If you have more than one idea, just submit them each individually.
       %li Make sure you check for spelling and grammar.
