--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -1,6 +1,7 @@
 %div#ideapage{ style: "margin-top: 0px;" }    
   %div.ideas_header
-    = link_to "Post new Idea", new_idea_path, class: "button button-actionable", style: "float: right;"
+    - if current_user
+      = link_to "Post new Idea", new_idea_path, class: "button button-actionable", style: "float: right;"
     %div{ style: "border-bottom: 1px solid #DDD; margin-bottom: 10px;" }
       %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png"}
       %h1{ style: "display: inline-block;" } MetaBright Labs
@@ -42,6 +43,7 @@
             %h6{ style: "margin: 0px;" } Created by #{link_to idea.creator.name, profile_path(idea.creator.username)}
             %p{ style: "padding: 10px 0; margin: 0;" }
               %pre= idea.description
+          = render "comments/comments", idea_comment_details(idea)
 
 :javascript
   $(function(){ 
