--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -30,7 +30,7 @@
                     %span.caret{ style: "margin: 6px 0 0 0;" }
                   %ul.dropdown-menu{ role: "button", style: "margin: 0; padding: 0; top:26px; left: -71px; min-width: 140px;" }
                     %li{ style: "margin-left: -10px;" }
-                      %div.graynub{ style: "top:-17px; left: 75px; margin:0; "}
+                      %div.graynub{ style: "top:-17px; left: 75px; margin:0; opacity: 0.0;"}
                       %div{ style: "padding: 3px 0px; margin:0;"}
                         %ul.profile_dropdown{ style: "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
                           %li= link_to "Edit Idea", edit_idea_path(idea), style: "padding: 0; color: inherit; text-shadow: none; padding-left: 8px; margin-left: -8px; margin-bottom: 2px;"
