--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -41,7 +41,7 @@
             %li.navuser
               %div.dropdown.pull-right
                 %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown"}
-                  = image_tag current_user.profile_pic, style: "width: 17px; height: 17px; vertical-align: middle;"
+                  = image_tag current_user.picture, style: "width: 17px; height: 17px; vertical-align: middle;"
                   %span{ style: "vertical-align: middle;" }= current_user.name 
                   %span.caret
                 %ul.dropdown-menu{ role: "button", style: "padding: 0; top:42px; right:-138px; min-width: 312px; min-height: 135px;" }
