--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -14,7 +14,7 @@
 %div#homepage
   %div#topsection
     %div#updatespace
-      = image_tag @user.profile_pic, class: "bigheaderimage"
+      = image_tag @user.picture, class: "bigheaderimage"
       %div.rightofbigheaderimage
         %div#topboxcontent{ style: "height: 83px;" }
           %div{ style: "width: 119px; float:right;" }
