--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -20,7 +20,7 @@
         %div{style:"display:inline-block; vertical-align:top; position:relative; bottom:34px; margin-bottom:-25px;"}
           %div.control-group
             %div.controls{style:"margin-left:112px;"}
-              = image_tag @user.profile_pic, id: "image_url_preview", width: "150"
+              = image_tag @user.picture, id: "image_url_preview", width: "150"
       %h4 Vital Stats
       %div.editprofilemanagementarea
         %div.control-group
